--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci 
-        run: npm run test
+
+      - name: Run tests
+        run: npm run test       
